kubernetes/apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: apps
  labels:
    app.kubernetes.io/name: uptime-kuma
spec:
  selector:
    app.kubernetes.io/name: uptime-kuma
  ports:
    - name: http
      port: 3001
      targetPort: http
