kubernetes/apps/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: legacy-home-wildcard-tls
